[project]
name = "cfut"
version = "0.0.0"
description = "cfut is a wrapper cli for 'aws cloudformation', 'aws ecr' and some others"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Ville M. Vainio" },
]
dependencies = [
    "PyYAML",
]

[project.scripts]
cfut = "cfut.cli:main"

[project.urls]
Homepage = "https://github.com/vivainio/cfut"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cfut"]

[tool.hatch.build.targets.sdist]
include = [
    "cfut/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest",
    "mypy",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
